Feat: добавлен кафка консюмер