@@ -8,6 +8,8 @@ import ru.kulbaka.bushunter.dto.ticket.TicketRequest;
 import ru.kulbaka.bushunter.dto.ticket.TicketResponse;
 import ru.kulbaka.bushunter.exception.EntityNotFoundException;
 import ru.kulbaka.bushunter.exception.TicketAlreadyPurchasedException;
+import ru.kulbaka.bushunter.kafka.model.TicketPurchaseEvent;
+import ru.kulbaka.bushunter.kafka.produser.TicketPurchaseProducer;
 import ru.kulbaka.bushunter.mapper.TicketMapper;
 import ru.kulbaka.bushunter.model.Ticket;
 import ru.kulbaka.bushunter.model.TicketSearchParams;
@@ -22,6 +24,7 @@ public class TicketServiceImpl implements TicketService {
     private final TicketDao ticketDao;
     private final RouteDao routeDao;
     private final TicketMapper ticketMapper;
+    private final TicketPurchaseProducer ticketPurchaseProducer;
 
     @Override
     public List<TicketResponse> getAvailableTickets(TicketSearchParams searchParams, int page, int size) {
@@ -39,14 +42,20 @@ public class TicketServiceImpl implements TicketService {
     }
 
     @Override
-    public void purchaseTicket(Long ticketId, Long userId) {
-        if (!ticketDao.existsById(ticketId)) {
-            throw new EntityNotFoundException("Билет с айди " + ticketId + " не найден");
-        }
-        if (ticketDao.checkTicketPurchased(ticketId)) {
+    public TicketResponse purchaseTicket(Long ticketId, Long userId) {
+        Ticket ticket = getTicketModelById(ticketId);
+        if (ticket.getUserId() != null) {
             throw new TicketAlreadyPurchasedException(ticketId);
         }
+
         ticketDao.purchaseTicket(ticketId, userId);
+
+        ticket.setUserId(userId);
+
+        TicketPurchaseEvent event = ticketMapper.toEvent(ticket);
+        ticketPurchaseProducer.sendTicketPurchaseEvent(event);
+
+        return ticketMapper.toResponse(ticket);
     }
 
     @Override
@@ -60,7 +69,7 @@ public class TicketServiceImpl implements TicketService {
     public List<TicketResponse> getAllTickets() {
         return ticketDao.findAll().stream()
                 .map(ticketMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -78,8 +87,8 @@ public class TicketServiceImpl implements TicketService {
 
         Ticket ticket = ticketMapper.toModel(request);
         Long id = ticketDao.create(ticket);
-        ticket.setId(id);
-        return ticketMapper.toResponse(ticket);
+        Ticket savedTicket = getTicketModelById(id);
+        return ticketMapper.toResponse(savedTicket);
     }
 
     @Override
